05 January 2016: Wouter
	- #731: tcp-mss, outgoing-tcp-mss options for unbound.conf, patch
	  from Daisuke Higashi.

04 January 2016: Wouter
	- Define DEFAULT_SOURCE together with BSD_SOURCE when that is defined,
	  for Linux glibc 2.20.
	- Fixup contrib/aaaa-filter-iterator.patch for moved contents in the
	  source code, so it applies cleanly again.  Removed unused variable
	  warnings.

15 December 2015: Ralph
	- Fix #729: omit use of escape sequences in echo since they are not 
	  portable (unbound-control-setup).

11 December 2015: Wouter
	- remove NULL-checks before free, patch from Michael McConville.
	- updated ax_pthread.m4 to version 21 with clang support, this
	  removes a warning from compilation.
	- OSX portability, detect if sbrk is deprecated.
	- OSX clang, stop -pthread unused during link stage warnings.
	- OSX clang new flto check.

10 December 2015: Wouter
	- 1.5.7 release
	- trunk has 1.5.8 in development.

8 December 2015: Wouter
	- Fixup 724 for unbound-control.

7 December 2015: Ralph
	- Do not minimise forwarded requests.

4 December 2015: Wouter
	- Removed unneeded whitespace from example.conf.

3 December 2015: Ralph
	- (after rc1 tag)
	- Committed fix to qname minimisation and unit test case for it.
	
3 December 2015: Wouter
	- iana portlist update.
	- 1.5.7rc1 prerelease tag.

2 December 2015: Wouter
	- Fixup 724: Fix PCA prompt for unbound-service-install.exe.
	  re-enable stdout printout.
	- For 724: Add Changelog to windows binary dist.

1 December 2015: Ralph
	- Qname minimisation review fixes

1 December 2015: Wouter
	- Fixup 724 fix for fname_after_chroot() calls.
	- Remove stdout printout for unbound-service-install.exe
	- .gitignore for git users.

30 November 2015: Ralph
	- Implemented qname minimisation

30 November 2015: Wouter
	- Fix for #724: conf syntax to read files from run dir (on Windows).

25 November 2015: Wouter
	- Fix for #720, fix unbound-control-setup windows batch file.

24 November 2015: Wouter